<resources>
    <string name="app_name">Green Food Challenge</string>

    <!--Home Screen-->
    <string name="welcome">What is your carbon footprint? Do this quiz to find out how you can help fix climate change.</string>

    <!--Planner Quiz Activity-->
    <string name="plannerTitle">Reducing Consumption</string>
    <string name="plannerQuestion">Select a plan that you prefer</string>
    <string name="meatLoverDescription">Changing diet to eat less high CO2 Food</string>
    <string name="lowMeatDescription">Reducing amount of food consumed</string>
    <string name="plantBasedDescription">Eating only plant-based protein (vegan)</string>

    <!--Meat Eater Activity-->
    <string name="meatTitle">Meat-Eater Plan</string>
    <string name="meatQuestion">Select a low CO2 protein that you prefer</string>
    <string name="pork">Pork (Pulled Pork, Roasted Pork,...)</string>
    <string name="chicken">Chicken (Stir Fry, Fried, ...)</string>
    <string name="fish">Fish (Sushi, Fish and Chips,...)</string>
    <string name="egg">Egg (Quiche, Hardboiled, Fried,...)</string>
    <string name="bean">Beans (Falafel, Hummus, Tofu,...) </string>

    <!--Low Meat Activity-->
    <string name="lowMeatTitle">Low Meat Plan</string>
    <string name="lowMeatQuestion">What is the amount of protein consumed you want to decrease per meal?</string>

    <string name="title_home">Food Quiz</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="max_times_per_week">10</string>
    <string name="min_times_per_week">0</string>
    <string name="title_activity_results">ResultsActivity</string>
    <string name="moreInfo">

        Carbon footprint is the impact of human activities measured
        in terms of the area of biologically productive land and water
        required to produce the goods consumed and to assimilate the
        carbon wastes generated. Carbon wastes, in other words, Greenhouse gases are
        measured in CO2e. They directly contribute to climate change.\n\n
        There are many different CO2e contributors, such as
        cars, and heating systems in buildings. But did you know, that food is
        also a source of CO2e? Our GreenFoodChallenge app measures how much CO2e
        your diet produces and helps discover how much you can save by making
        dietary adjustments! Find out what you can do to save Earth!
    </string>

    <!-- Results Activity -->
    <string name="resultsHeader1">You consume</string>
    <string name="resultsHeader2">Per year</string>
    <string name="averageCanadian">The average footprint for canadians is 8 metric tons</string>
    <string name="averageWorldwide">The Average worldwide footprint is 4 metric tons</string>
    <string name="targetWorldwide">The worldwide target to combat climate change is 2 metric tons</string>
    <string name="reduceConsumption">Reduce Consumption</string>

    <!-- Results Activity 2 -->
    <string name="results2Header1">You Will Save</string>
    <string name="results2Vancouver">If everyone in Vancouver, choose your plan, we will save</string>
    <string name="results2PerYear">Per Year</string>
    <string name="results2Redo">Redo Quiz</string>
    <string name="results2About">About</string>
    <string name="facebook_app_id">302662937008173</string>
    <string name="fb_login_protocol_scheme">fb302662937008173</string>
    <string name="pledgeButton">Make a Pledge</string>

    <!-- Pledge Summary -->
    <string name="pledgeSummary1">Number Of Pledges</string>
    <string name="pledgeSummary2">Total Amount Saved</string>
    <string name="pledgeSummary3">Average Save Amount</string>

    <!-- Login -->
    <string name="loginMessage"></string>
    <!--Sharing Activity-->
    <string name="share_guide">Share</string>
    <string name="share_title">Sharing Your Pledge!</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_main">MainActivity</string>/>


    <!--Add Meal-->
    <string name="mealName">Meal Name*</string>
    <string name="mealNameHint">Meatball Spaghetii</string>
    <string name="description">Description</string>
    <string name="rating">Rating</string>
    <string name="protein">Main Protein*</string>
    <string name="restaurant">Restaurant*</string>
    <string name="photo">Photo</string>
    <string name="uploadPhoto">UPLOAD</string>

    <string-array name="proteinList">
        <item>Beef</item>
        <item>Pork</item>
        <item>Chicken</item>
        <item>Fish</item>
        <item>Egg</item>
        <item>Bean</item>
    </string-array>

    <!--testing 2nd profile fragment-->
    <string name="testFragment">remember this is just a test. remember this is just a test. remember this is just a test\n
                                remember this is just a test and nothing will happen. close your eyes and breathe in deeply\n
                                remember this is just a test. remember this is just a test. it will not affect you in any way\n
                                relax. nothing will hurt you. you can trust me. remember this is just a test.</string>
    <string-array name="location_names">
        <item>Vancouver</item>
        <item>Burnaby</item>
        <item>Richmond</item>
        <item>Coquitlam</item>
        <item>Surrey</item>
        <item>New Westminister</item>
    </string-array>
</resources>
