<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".activities.MeatEater">

    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar" />

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/meatTitle"
        android:textColor="@color/headerText"
        android:textStyle="bold"
        android:textSize="25dp" />

    <TextView
        android:id="@+id/question"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:textAlignment="center"
        android:text="@string/meatQuestion"
        android:textAppearance="@style/TextAppearance.AppCompat.Light.SearchResult.Title" />



    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:orientation="horizontal">

        <LinearLayout
            android:id="@+id/option1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/image1"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:layout_gravity="center"
                android:adjustViewBounds="true"
                android:scaleType="fitXY"
                android:src="@drawable/chicken" />

            <TextView
                android:id="@+id/text1"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:text="@string/chicken"/>

        </LinearLayout>'

        <LinearLayout
            android:id="@+id/option2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/image2"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:layout_gravity="center"
                android:adjustViewBounds="true"
                android:scaleType="fitXY"
                android:src="@drawable/pork" />

            <TextView
                android:id="@+id/text2"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:text="@string/pork"/>

        </LinearLayout>

    </LinearLayout>


    <LinearLayout
        android:id="@+id/option3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/image3"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_gravity="center"
            android:adjustViewBounds="true"
            android:scaleType="fitXY"
            android:src="@drawable/bean"/>

        <TextView
            android:id="@+id/text3"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:text="@string/bean"/>

    </LinearLayout>
</LinearLayout>