<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".activities.PlannerQuiz">

    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar" />

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/plannerTitle"
        android:textColor="@color/headerText"
        android:textSize="25dp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/question"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:text="@string/plannerQuestion"
        android:textAppearance="@style/TextAppearance.AppCompat.Light.SearchResult.Title" />


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:orientation="horizontal">

        <LinearLayout
            android:id="@+id/lowMeat"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:layout_gravity="center"
                android:adjustViewBounds="true"
                android:scaleType="fitXY"
                android:src="@drawable/lowmeat" />

            <TextView
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:text="@string/lowMeatDescription"
                android:textAlignment="center" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/plantBased"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:layout_gravity="center"
                android:adjustViewBounds="true"
                android:scaleType="fitXY"
                android:src="@drawable/plantbased" />

            <TextView
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:text="@string/plantBasedDescription"
                android:textAlignment="center" />
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/meatLover"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_gravity="center"
            android:adjustViewBounds="true"
            android:cropToPadding="false"
            android:scaleType="fitXY"
            android:src="@drawable/meateater" />

        <TextView
            android:id="@+id/text"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:text="@string/meatLoverDescription"
            android:textAlignment="center" />
    </LinearLayout>
    '

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <include
            android:id="@+id/navbar"
            layout="@layout/navbar" />
    </LinearLayout>

</LinearLayout>